--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="img/logo.png">
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/all.min.css" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
@@ -67,17 +68,85 @@
         ><i class="fa-solid fa-bars-staggered ico"></i>
       </span>
     </button>
+    <section class="landing">
+      <div
+        class="hei d-flex flex-wrap flex-column justify-content-center align-content-center fw-bold w-100"
+      >
+        <h1 class="">Ahmed Lakosha</h1>
+        <div class="d-flex fs-1 my-pio">
+          <span class="mt-1" is="type-async" id="type-text"></span>
+          <span class="blinking-cursor mt-1">|</span>
+        </div>
+        </h1>
+      </div>
+    </section>
     <main>
-      <div class="landing">
-        <div
-          class="hei d-flex flex-wrap flex-column justify-content-center align-content-center fw-bold w-100"
-        >
-          <h1 class="">Ahmed Lakosha</h1>
-          <div class="d-flex fs-1 my-pio">
-            <span class="mt-1" is="type-async" id="type-text"></span>
-            <span class="blinking-cursor mt-1">|</span>
+      <div class="about bg-white py-5">
+        <div class="container-fluid">
+          <div class="text-heading">
+            <div class="p-header position-relative">
+              <h2 class="py-3">About</h2>
+            </div>
+            <p class="text-black-50 fs-5 pb-3">Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
           </div>
-          </h1>
+          <div class="row">
+            <div class="col-md-4">
+              <img src="img/my-avatar.png" alt="" class="img-fluid">
+            </div>
+            <div class="col-md-8">
+              <div class="p-2">
+                <h3 class="pb-3">Web Developer.</h3>
+                <p class="text-black-50 fs-5 pb-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              </div>
+              <div class="row">
+                <ul class="col-md-6">
+                  <li class="pb-3">
+                    <i class="fa-solid fa-angle-right fs-5 ps-2"></i>
+                    <h4 class="d-inline">Birthday:</h4>
+                    <span class="text-black-50 fs-5">11 \ 5 \ 1994</span>
+                  </li>
+                  <li class="pb-3">
+                    <i class="fa-solid fa-angle-right fs-5 ps-2"></i>
+                    <h4 class="d-inline">Website:</h4>
+                    <span class="text-black-50 fs-5">WWW.example.com</span>
+                  </li>
+                  <li class="pb-3">
+                    <i class="fa-solid fa-angle-right fs-5 ps-2"></i>
+                    <h4 class="d-inline">Phone:</h4>
+                    <span class="text-black-50 fs-5">+201010701022</span>
+                  </li>
+                  <li class="pb-md-3">
+                    <i class="fa-solid fa-angle-right fs-5 ps-2"></i>
+                    <h4 class="d-inline">City:</h4>
+                    <span class="text-black-50 fs-5">eygpt,cairo,new cairo</span>
+                  </li>
+                </ul>
+                <ul class="col-md-6">
+                  <li class="pb-3">
+                    <i class="fa-solid fa-angle-right fs-5 ps-2"></i>
+                    <h4 class="d-inline">Age:</h4>
+                    <span class="text-black-50 fs-5">29 year</span>
+                  </li>
+                  <li class="pb-3">
+                    <i class="fa-solid fa-angle-right fs-5 ps-2"></i>
+                    <h4 class="d-inline">Degree:</h4>
+                    <span class="text-black-50 fs-5">master</span>
+                  </li>
+                  <li class="pb-3">
+                    <i class="fa-solid fa-angle-right fs-5 ps-2"></i>
+                    <h4 class="d-inline">PhEmail:</h4>
+                    <span class="text-black-50 fs-5">1ahmed.lakosha94@gmail</span>
+                  </li>
+                  <li class="pb-3">
+                    <i class="fa-solid fa-angle-right fs-5 ps-2"></i>
+                    <h4 class="d-inline">Freelance:</h4>
+                    <span class="text-black-50 fs-5">Available</span>
+                  </li>
+                </ul>
+              </div>
+              <p class="fs-5 text-black-50">Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis. Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque. Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.</p>
+            </div>
+          </div>
         </div>
       </div>
     </main>
